Update lap2 add name Mr.Atkarapong pantem
อัครพงษ์

--- a/lab2.html
+++ b/lab2.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Lad2</h1>
 <p>Owner File is Mr.Attapol Aunop Number 5912269106</p>
+  <p>Edited by  Mr.Atkarapong Pantem Number 5912269104</p>
 </body>
 </html>
